crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column_with_enum_type@add_column_with_enum_type_MySql.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
expression: sql
---
;
ALTER TABLE `users` ADD COLUMN `status` ENUM('active', 'inactive')
