crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column_with_enum_type@add_column_with_enum_type_Postgres.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
expression: sql
---
CREATE TYPE "users_status_type" AS ENUM ('active', 'inactive');
ALTER TABLE "users" ADD COLUMN "status" users_status_type
