crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column_with_enum_type@add_column_with_enum_type_Sqlite.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "status" enum_text , CONSTRAINT "chk_users_status" CHECK ("status" IN ('active', 'inactive')));
INSERT INTO "users_temp" ("id", "status") SELECT "id", NULL AS "status" FROM "users";
DROP TABLE "users";
ALTER TABLE "users_temp" RENAME TO "users"
