crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column_with_fill_with_empty_string@fill_with_empty_string_Postgres.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
expression: sql
---
ALTER TABLE "users" ADD COLUMN "nickname" text;
UPDATE "users" SET "nickname" = '';
ALTER TABLE "users" ALTER COLUMN "nickname" TYPE text, ALTER COLUMN "nickname" SET NOT NULL
