crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column_with_fill_with_empty_string@fill_with_empty_string_Sqlite.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "nickname" text NOT NULL );
INSERT INTO "users_temp" ("id", "nickname") SELECT "id", '' AS "nickname" FROM "users";
DROP TABLE "users";
ALTER TABLE "users_temp" RENAME TO "users"
