crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column_with_pg_type_cast_default@pg_type_cast_default_Postgres.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
assertion_line: 673
expression: sql
---
ALTER TABLE "project" ADD COLUMN "story_index" json NOT NULL DEFAULT ('[]'::json)
