crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column_with_pg_type_cast_default@pg_type_cast_default_Sqlite.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
assertion_line: 673
expression: sql
---
CREATE TABLE "project_temp" ( "id" integer NOT NULL, "story_index" json_text NOT NULL DEFAULT ('[]') )
INSERT INTO "project_temp" ("id", "story_index") SELECT "id", '[]' AS "story_index" FROM "project"
DROP TABLE "project"
ALTER TABLE "project_temp" RENAME TO "project"
