crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__fill_with_cast_operator_inside_quotes_is_verbatim@fill_with_quoted_cast_verbatim_mysql.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
expression: sql
---
ALTER TABLE `subscription` ADD COLUMN `tier` int;
UPDATE `subscription` SET `tier` = CASE WHEN plan_tag = 'legacy::v1' THEN 1 ELSE 2 END::integer;
ALTER TABLE `subscription` MODIFY COLUMN `tier` int NOT NULL
