crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__fill_with_cast_operator_inside_quotes_is_verbatim@fill_with_quoted_cast_verbatim_sqlite.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
expression: sql
---
CREATE TABLE "subscription_temp" ( "id" integer NOT NULL, "plan_key" text NOT NULL, "plan_tag" text NOT NULL, "device_os" text NOT NULL, "device_family" text NOT NULL, "tier" integer NOT NULL );
INSERT INTO "subscription_temp" ("id", "plan_key", "plan_tag", "device_os", "device_family", "tier") SELECT "id", "plan_key", "plan_tag", "device_os", "device_family", CASE WHEN plan_tag = 'legacy::v1' THEN 1 ELSE 2 END::integer AS "tier" FROM "subscription";
DROP TABLE "subscription";
ALTER TABLE "subscription_temp" RENAME TO "subscription"
